argoCD/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-to-www
  namespace: unipro-site
spec:
  parentRefs:
    - name: uniproject-jp-gateway
      namespace: infra-gateway
  hostnames:
    - "uniproject.jp"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: www.uniproject.jp
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unipro-site
  namespace: unipro-site
spec:
  parentRefs:
    - name: uniproject-jp-gateway
      namespace: infra-gateway
  hostnames:
    - "www.uniproject.jp"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: unipro-site
          port: 80
      # sticky.cookie
      sessionPersistence:
        sessionName: cookie
        type: Cookie
        cookieConfig:
          lifetimeType: Session
