argoCD/ingress-old.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unipro-site-old-ingress
  namespace: unipro-site
  annotations:
    cert-manager.io/cluster-issuer: le-cf-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ngins.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/permanent-redirect: "https://www.uniproject.jp"
    nginx.ingress.kubernetes.io/permanent-redirect-code: "308"
spec:
  ingressClassName: nginx
  rules:
    - host: www.uniproject-tech.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unipro-site
                port:
                  number: 80
  tls:
    - hosts:
        - www.uniproject-tech.net
        - uniproject-tech.net
      secretName: unipro-www-old-tls
