argoCD/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unipro-site-ingress
  namespace: unipro-site
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: www.uniproject-tech.net
    http:
      paths:
      - path: /(?!\.)
        pathType: Prefix
        backend:
          service:
            name: unipro-site
            port:
              number: 80
